--- a/API/API.csproj
+++ b/API/API.csproj
@@ -1,6 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
 	<ItemGroup>
+	  <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.5" />
 	  <PackageReference Include="Microsoft.AspNetCore.Identity.UI" Version="3.1.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="3.1.5" />
 	  <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="3.1.5">
@@ -11,6 +12,7 @@
 
 	<ItemGroup>
 		<ProjectReference Include="..\Application\Application.csproj" />
+		<ProjectReference Include="..\Infrastructure\Infrastructure.csproj" />
 	</ItemGroup>
 
 	<PropertyGroup>
